<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2012-2013 JNRain

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<resources>

    <string name="app_name">JNRain</string>
    <string name="hello_world">TODO</string>
    <string name="menu_settings">Settings</string>
    <string name="title_kbs_section_list">Sections</string>
    <string name="title_kbs_board_list">Boards</string>
    <string name="title_kbs_global_hot_posts_list">Hot posts</string>
    <string name="title_kbs_board">View threads</string>
    <string name="title_kbs_read_thread">Read thread</string>
    <string name="title_kbs_new_post">New post</string>
    <string name="title_preference">Preference</string>
    <string name="title_about">About</string>
    <string name="app_name_en">JNRain</string>
    <string name="splash_image_desc">Splash image</string>

    <!-- loading messages -->
    <string name="loading_global_hot_posts">Loading global hot posts…</string>
    <string name="please_wait">Please wait…</string>

    <!-- success messages -->
    <string name="ok_short">OK</string>

    <!-- failure messages -->
    <string name="fail_load_global_hot_posts">Failed loading global hot posts.</string>

    <!-- GlobalHotPostsListActivity -->
    <string name="return_desc">Return</string>

    <!-- Dynamic page fragments -->
    <string name="page_nr">Page {0}</string>

    <!-- Login screen -->
    <string name="field_uid">User ID</string>
    <string name="field_psw">Password</string>
    <string name="is_remember_psw">Remember PSW</string>
    <string name="is_auto_login">Autologon</string>
    <string name="login">Login</string>
    <string name="guest_login">Guest login</string>
    <string name="guest_login_land">Guest</string>
    <string name="login_dlg_title">Logging in</string>

    <!-- Register screen -->
    <string name="register">New account</string>
    <string name="field_new_uid">Choose a user ID</string>
    <string name="field_new_email">E-mail address</string>
    <string name="field_new_password">Your password</string>
    <string name="field_repeat_password">Repeat your password</string>
    <string name="field_realname">Real name</string>
    <string name="field_stud_id">Student ID number</string>
    <string name="field_is_ethnic_minority">I belong to an ethnic minority group</string>
    <string name="field_ethnic_minority_star">☆</string>
    <string name="field_ethnic_minority_desc">Some students from ethnic minority groups need a ☆ in front of their names. Check this if you are one.</string>
    <string name="field_gender">Gender</string>
    <string name="field_nickname">Nickname</string>
    <string name="field_captcha">Verification code</string>
    <string name="field_use_current_phone"><![CDATA[Use <b>{0}</b> as phone number]]></string>
    <string name="field_phone">Phone number</string>
    <string name="submit_register">Submit</string>
    <string name="register_disclaimer">
<![CDATA[
<p>By using this site you agree to be bound by this <a href="http://bbs.jnrain.com/wForum/register.php">Terms of Service</a> (in Chinese).</p>
<p>JNRain is a Jiangnan University-affiliated site, under regulations from the Ministry of Education.
This does mean you have to submit your real identity before you can use this site, thanks for your cooperation.</p>
Note: Accounts registered here are those of the legacy BBS site.
        ]]>
    </string>

    <!-- Register process -->
    <!-- UID availability check -->
    <string name="reg_uid_empty">Empty UID</string>
    <string name="reg_uid_exists">Unavailable</string>
    <string name="reg_uid_too_short">Too short</string>
    <string name="reg_uid_too_long">Too long</string>
    <string name="reg_uid_malformed">Malformed</string>
    <string name="reg_uid_banned">Banned</string>

    <!-- Password -->
    <string name="reg_psw_empty">No password</string>
    <string name="reg_psw_too_short">Too short</string>
    <string name="reg_psw_too_long">Too long</string>
    <string name="reg_psw_mismatch">Mismatch</string>
    <string name="reg_psw_username">Same as UID</string>

    <!-- Email -->
    <string name="reg_email_empty">Empty e-mail address</string>
    <string name="reg_email_malformed">Wrong format</string>

    <!-- Nickname -->
    <string name="reg_nick_empty">No nickname</string>

    <!-- Student ID -->
    <string name="reg_stud_id_empty">No student ID</string>
    <string name="reg_stud_id_malformed">Wrong format</string>

    <!-- Real name -->
    <string name="reg_realname_empty">No name</string>

    <!-- Phone -->
    <string name="reg_phone_empty">No phone number</string>
    <string name="reg_phone_onlynumbers">Only numbers</string>

    <!-- Captcha -->
    <string name="reg_captcha_empty">No captcha</string>

    <!-- (Some) Status messages -->
    <string name="reg_status_0">Register successful</string>
    <string name="reg_status_101">Please provide your phone number</string>
    <string name="reg_status_201">Captcha image did not load</string>
    <string name="reg_status_202">Wrong captcha</string>
    <string name="reg_status_203">Password is too short</string>
    <string name="reg_status_204">Password cannot be the same as UID</string>
    <string name="reg_status_299">Identity check failed</string>
    <string name="reg_status_301">Malformed UID</string>
    <string name="reg_status_302">UID is too short</string>
    <string name="reg_status_303">UID is banned</string>
    <string name="reg_status_304">UID is already taken</string>
    <string name="reg_status_305">UID is too long</string>
    <string name="reg_status_306">Password is too long</string>
    <string name="reg_status_307">System error while creating ID</string>
    <string name="reg_status_399">Unknown error while creating ID</string>

    <!-- Read thread -->
    <string name="action_reply">Reply to this post</string>

    <!-- New post -->
    <string name="action_new_post">New post</string>
    <string name="post_title">Title</string>
    <string name="post_content">Content</string>
    <string name="action_do_post">Post</string>

    <!-- Status toasts -->
    <!-- General -->
    <string name="msg_network_fail">Network failure</string>
    <string name="msg_unknown_status">Unknown status: {0}</string>

    <!-- Authentication -->
    <string name="msg_login_success">Login successful</string>
    <string name="msg_login_no_uid">Please enter your user ID</string>
    <string name="msg_login_fail">Wrong credential</string>
    <string name="msg_login_toomany">Too many concurrent logins</string>
    <string name="msg_login_disabled">Account disabled by sysop</string>
    <string name="msg_login_ip_denied">Your IP is banned by the site</string>
    <string name="msg_login_freq">Too frequent logins</string>
    <string name="msg_login_capacity">System capacity exceeded</string>
    <string name="msg_login_ipacl">Logging in from your IP disallowed</string>
    <string name="msg_logout_success">{0} is now logged out</string>

    <!-- New post -->
    <string name="msg_post_success">Post successful</string>
    <string name="msg_post_success_reply">Reply successful</string>
    <string name="msg_post_no_guest_post">Guest posts not allowed</string>
    <string name="msg_post_no_brd_given">Board not specified</string>
    <string name="msg_post_no_such_brd">Specified board does not exist</string>
    <string name="msg_post_eperm">Read permission of board denied</string>
    <string name="msg_post_erofs">Board is read-only</string>
    <string name="msg_post_denied">Cannot post on the board</string>
    <string name="msg_post_no_title">Title empty</string>
    <string name="msg_post_no_content">Content empty</string>
    <string name="msg_post_ebadf">Bad post ID to reply</string>
    <string name="msg_post_locked">Post is locked</string>
    <string name="msg_post_river_crab">Post is filtered</string>
    <string name="msg_post_directory">Posting to directory disallowed</string>
    <string name="msg_post_banned">Account banned by board OP</string>
    <string name="msg_post_eagain">Operation too frequent</string>
    <string name="msg_post_idx_io">Server error: reading of index failed</string>
    <string name="msg_post_internal_err">Internal server error</string>
    <string name="msg_post_silent_night">No posting during midnight</string>

    <!-- Preferences -->
    <string name="prefs_title_account">Account</string>
    <string name="prefs_title_general">General</string>
    <string name="prefs_ui_exit_behavior">App exit style</string>

    <string-array name="prefs_ui_exit_choices">
        <item name="prefs_ui_exit_direct">Immediately exit</item>
        <item name="prefs_ui_exit_doubleclick">Doubleclick confirmation</item>
        <item name="prefs_ui_exit_dialog">Confirmation dialog</item>
    </string-array>
    <string-array name="prefs_ui_exit_values">

        <!-- Constants, do not translate -->
        <item name="prefs_ui_exit_direct">direct</item>
        <item name="prefs_ui_exit_doubleclick">doubleclick</item>
        <item name="prefs_ui_exit_dialog">dialog</item>
    </string-array>
    <!-- Duplicates of constants for preferences XML to use as default -->
    <string name="prefs_ui_exit_direct">direct</string>
    <string name="prefs_ui_exit_doubleclick">doubleclick</string>
    <string name="prefs_ui_exit_dialog">dialog</string>
    <string name="prefs_ui_exit_doubleclick_timeout">Doubleclick timeout</string>

    <!-- Updater preferences -->
    <string name="prefs_updater_enable_auto">Auto check for updates</string>
    <string name="prefs_updater_channel">Update channel</string>
    <string name="prefs_updater_channel_select">Select an update channel</string>
    <string name="prefs_updater_check_freq">Update check frequency</string>

    <!-- App exit dialog -->
    <string name="dlg_exit_confirm_title">Confirm exit</string>
    <string name="dlg_exit_confirm_msg">Do you want to leave the app now?</string>
    <string name="dlg_exit_confirm_yes">Yes</string>
    <string name="dlg_exit_confirm_no">Not now</string>

    <!-- About screen -->
    <string name="about_app">About</string>
    <string name="app_full_name">JNRain for Android</string>
    <string name="check_updates">Check updates</string>

    <!-- Updater -->
    <string name="check_updates_dlg_title">Checking for updates</string>
    <string name="msg_version_is_latest">v{0} is the latest version</string>
    <string name="new_version_available">New version {0} now available</string>
    <string name="current_update_channel"><![CDATA[Currently on the <b>{1}</b> ({0}) update channel.]]></string>
    <string name="update_chan_name_stable">Stable</string>
    <string name="update_chan_name_next">Preview</string>
    <string name="latest_version_is"><![CDATA[Latest: <b>{0}</b>]]></string>
    <string name="latest_version_is_w_codename"><![CDATA[Latest: <b>{0}</b> [{1}]]]></string>
    <string name="latest_version_unknown">To be checked</string>
    <string name="last_checked_time"><![CDATA[Last checked: <b>{0}</b>]]></string>
    <string name="last_checked_never">Never before</string>
    <string name="download_update">Download update</string>

    <!-- Accounts -->
    <string name="account_type_kbs">JNRain (old site)</string>

    <!-- Nav -->
    <string name="nav_remove_account">Change identity</string>

</resources>