<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 JNRain

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:jnrain="http://schemas.jnrain.com/android" >

    <name.xen0n.cytosol.ui.preference.SummarizedListPreference
        android:defaultValue="@string/prefs_ui_exit_doubleclick"
        android:dialogTitle="@string/prefs_ui_exit_behavior"
        android:entries="@array/prefs_ui_exit_choices"
        android:entryValues="@array/prefs_ui_exit_values"
        android:key="exit_behavior"
        android:order="1"
        android:summary="%s"
        android:title="@string/prefs_ui_exit_behavior" />

    <name.xen0n.cytosol.ui.preference.SeekBarPreference
        android:defaultValue="3"
        android:key="exit_doubleclick_timeout"
        android:max="6"
        android:order="2"
        android:title="@string/prefs_ui_exit_doubleclick_timeout"
        jnrain:min="1"
        jnrain:unitsLeft=""
        jnrain:unitsRight="s" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="enable_auto_update"
        android:order="4"
        android:title="@string/prefs_updater_enable_auto" />

    <name.xen0n.cytosol.ui.preference.SeekBarPreference
        android:defaultValue="3"
        android:dependency="enable_auto_update"
        android:key="update_check_freq"
        android:max="14"
        android:order="5"
        android:title="@string/prefs_updater_check_freq"
        jnrain:min="1"
        jnrain:unitsLeft="每"
        jnrain:unitsRight="天" />

</PreferenceScreen>