<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2013 JNRain

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:background="@drawable/splash_bg"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageLogo"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_gravity="center_vertical|center_horizontal"
        android:layout_weight="1"
        android:contentDescription="@string/splash_image_desc"
        android:src="@drawable/jnrain_splash_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="vertical"
        android:padding="10dp" >

        <EditText
            android:id="@+id/editUID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_uid"
            android:imeOptions="actionNext|flagForceAscii"
            android:maxLength="14"
            android:nextFocusDown="@+id/editPassword"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/field_psw"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:nextFocusDown="@+id/btnLogin"
            android:singleLine="true"
            android:typeface="monospace" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="fill_horizontal" >

            <CheckBox
                android:id="@+id/checkBoxIsRemember"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkbox_text_isremember" />

            <CheckBox
                android:id="@+id/checkBoxIsAutoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/checkbox_text_isautologin" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:nextFocusRight="@+id/btnGuestLogin"
                android:text="@string/login" />

            <Button
                android:id="@+id/btnGuestLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guest_login" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>